frontend:     - fix favorits button     - setup favoritsRepo for update and delete favorits
server:
    - add country endpoint
    - add country storage
    - add country service
    - fix googleauth service (fix jwt cookie expiration)
